--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,11 +20,11 @@
 .App-link {
   color: #09d3ac;
 }
+
 .navbarn{
   margin: auto;
   background-color: transparent;
 }
-
 
 .intro-text{
   margin-top: -10rem;
@@ -51,7 +51,6 @@
   margin-bottom: 10rem;
 }
 
-
 body{
 background: url(https://images.pond5.com/young-man-office-cartoon-hd-footage-088280711_prevstill.jpeg) fixed;
   background-size: cover;
@@ -62,7 +61,6 @@ background: url(https://images.pond5.com/young-man-office-cartoon-hd-footage-088
   border-color: black;
   color: black;
 }
-
 
 .search:hover{
   background-color: transparent;
@@ -81,11 +79,9 @@ border-color: black;
   height: 10rem;
 }
 
-
 .submitb{
   background-color: #0284fe;
   }
-  
   
   .buttons{
   background-color: transparent;
@@ -103,7 +99,6 @@ border-color: black;
   width: 25%;
   transition-duration: 1s;
   border-color: #000000;
-  
   }
   
   .button1:hover{
@@ -113,7 +108,6 @@ border-color: black;
     border-color: #000000;
   }
   
-  
   .button2{
     margin-top: -35rem;
     margin-bottom: 32rem;
@@ -121,7 +115,6 @@ border-color: black;
   width: 25%;
   transition-duration: 1s;
   border-color: #000000;
-  
   }
   
   .button2:hover{
@@ -137,7 +130,6 @@ border-color: black;
     margin-top: -40rem;
   }
   
-  
   .post-displayy{
     background-color: rgba(238, 238, 238, 0.4) !important;
   background-image: url(https://biocharculture.xyz/image/62772-full_image-to-video-filter-confetti.gif);
@@ -148,18 +140,19 @@ border-color: black;
   .logo{
     width: 30%;
   }
-  
+
   .post-header{
     margin-top: 10rem;
     font-weight: 500;
     text-align: center;
     z-index: 10;
   }
-  
+
   .post-details{
     text-align: center;
     font-weight: 300;
   }
-  
 
-
+  .aboutText{
+    margin-top:5rem;
+  }
