--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -145,7 +145,7 @@ color: white;
     }
   
     .post-displayy{
-      background-color: rgba(238, 238, 238, 0.4) !important;
+ 
     background-image: url(https://biocharculture.xyz/image/62772-full_image-to-video-filter-confetti.gif);
     background-blend-mode: color;
       width: 40%;
@@ -156,6 +156,7 @@ color: white;
     }
   
     .post-header{
+      color: white;
       margin-top: 10rem;
       font-weight: 500;
       text-align: center;
@@ -163,6 +164,7 @@ color: white;
     }
 
   .post-details{
+    color: white;
     text-align: center;
     font-weight: 300;
   }
@@ -382,6 +384,25 @@ color: white;
   .card1{
     margin-bottom: 10rem;
   }
+
+  .matches-header{
+    font-weight: 200;
+    color: white;
+    margin-top: 14rem;
+  }
+
+  .matches-b p{
+    color: white;
+    font-weight: 200;
+    text-align: center;
+  }
+
+
+  .bb{
+    border-color: wheat;
+    border-style: solid;
+  }
+
 
 
 
