--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -97,6 +97,7 @@ margin-right: 10rem;
   padding: 10rem;
   margin-top: -100rem;
   }
+
    .button1{
      border-style: solid;
     border-color: white;
@@ -464,6 +465,13 @@ color: white;
     
   }
 
+  .contact-details{
+    margin-top: .8rem;
+    color: white;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    
+  }
 
 
 
